--- a/koin/i18n/ko/docusaurus-plugin-content-docs/current.json
+++ b/koin/i18n/ko/docusaurus-plugin-content-docs/current.json
@@ -1,6 +1,38 @@
 {
   "version.label": {
-    "message": "Next",
+    "message": "다음",
     "description": "The label for version current"
+  },
+  "sidebar.sidebar.category.配置": {
+    "message": "구성",
+    "description": "The label for category 配置 in sidebar sidebar"
+  },
+  "sidebar.sidebar.category.核心 & 测试": {
+    "message": "코어 & 테스트",
+    "description": "The label for category 核心 & 测试 in sidebar sidebar"
+  },
+  "sidebar.sidebar.category.Android": {
+    "message": "Android",
+    "description": "The label for category Android in sidebar sidebar"
+  },
+  "sidebar.sidebar.category.Compose": {
+    "message": "Compose",
+    "description": "The label for category Compose in sidebar sidebar"
+  },
+  "sidebar.sidebar.category.多平台": {
+    "message": "멀티플랫폼",
+    "description": "The label for category 多平台 in sidebar sidebar"
+  },
+  "sidebar.sidebar.category.Ktor": {
+    "message": "Ktor",
+    "description": "The label for category Ktor in sidebar sidebar"
+  },
+  "sidebar.sidebar.category.注解": {
+    "message": "어노테이션",
+    "description": "The label for category 注解 in sidebar sidebar"
+  },
+  "sidebar.sidebar.category.教程": {
+    "message": "튜토리얼",
+    "description": "The label for category 教程 in sidebar sidebar"
   }
 }
