--- a/koin/i18n/zh-Hant/docusaurus-theme-classic/footer.json
+++ b/koin/i18n/zh-Hant/docusaurus-theme-classic/footer.json
@@ -1,11 +1,11 @@
 {
   "link.title.官方文档": {
     "message": "官方文檔",
-    "description": "The title of the footer links column with title=官方文檔 in the footer"
+    "description": "The title of the footer links column with title=官方文档 in the footer"
   },
   "link.title.社区": {
     "message": "社區",
-    "description": "The title of the footer links column with title=社區 in the footer"
+    "description": "The title of the footer links column with title=社区 in the footer"
   },
   "link.item.label.Koin": {
     "message": "Koin",
@@ -29,7 +29,7 @@
   },
   "link.item.label.问题反馈": {
     "message": "問題反饋",
-    "description": "The label of footer link with label=問題反饋 linking to https://github.com/BinaryTape/Open-Docs/issues"
+    "description": "The label of footer link with label=问题反馈 linking to https://github.com/BinaryTape/Open-Docs/issues"
   },
   "copyright": {
     "message": "Copyright © 2025 OpenAIDoc. 基於 Docusaurus 構建。",
